Avoid notes in stories from wrapping

--- a/data/style.css
+++ b/data/style.css
@@ -751,6 +751,7 @@ hr {
     padding: 0 8px;
     font-size: 1rem;
     border-radius: 5px;
+    text-wrap-mode: nowrap;
 }
 
 .component-story span {
